--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             
             <!-- Center Navigation -->
             <div class="nav-links">
-                <a href="#arcade" class="nav-link">Arcade</a>
+                <a href="arcade/arcade.html" class="nav-link">Arcade</a>
+                <a href="tokenomics.html" class="nav-link">Tokenomics</a>
                 <a href="#shop" class="nav-link">Shop</a>
                 <a href="#forum" class="nav-link" id="forum-link">Forum</a>
             </div>
@@ -73,7 +74,8 @@
             
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="mobile-menu hidden">
-                <a href="#arcade" class="mobile-nav-link">Arcade</a>
+                <a href="arcade/arcade.html" class="mobile-nav-link">Arcade</a>
+                <a href="tokenomics.html" class="mobile-nav-link">Tokenomics</a>
                 <a href="#shop" class="mobile-nav-link">Shop</a>
                 <a href="#forum" class="mobile-nav-link" id="mobile-forum-link">Forum</a>
                 <a href="#chat" class="mobile-nav-link" id="mobile-chat-link">Chat</a>
