feat: Add custom RPS image to game tile
- Replaced generic emoji icon with rps.png image
- Matches styling of other game tiles (Coin Toss, Connect 4, War)
- Uses .game-icon-img wrapper for consistent hover effects

--- a/arcade/arcade.html
+++ b/arcade/arcade.html
@@ -92,7 +92,9 @@
 
             <!-- Rock Paper Scissors Game -->
             <div class="game-tile" id="rps-tile">
-                <div class="game-icon">✊✋✌️</div>
+                <div class="game-icon-img">
+                    <img src="../assets/rps.png" alt="Rock Paper Scissors" class="game-image">
+                </div>
                 <h3 class="game-title">Rock Paper Scissors</h3>
                 <p class="game-description">Best of 3 battles</p>
                 <p class="game-description">Winner takes all</p>
