--- a/arcade/arcade.html
+++ b/arcade/arcade.html
@@ -302,8 +302,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js"></script>
-    <script src="arcade.js"></script>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
 
