--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <!-- Center Navigation -->
             <div class="nav-links">
                 <a href="arcade/arcade.html" class="nav-link">Arcade</a>
-                <a href="tokenomics.html" class="nav-link">Tokenomics</a>
-                <a href="#shop" class="nav-link">Shop</a>
+                <a href="#" class="nav-link" id="tokenomics-link">Tokenomics</a>
+                <a href="#" class="nav-link" id="shop-link">Shop</a>
                 <a href="/forum" class="nav-link" id="forum-link">Forum</a>
             </div>
             
@@ -75,8 +75,8 @@
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="mobile-menu hidden">
                 <a href="arcade/arcade.html" class="mobile-nav-link">Arcade</a>
-                <a href="tokenomics.html" class="mobile-nav-link">Tokenomics</a>
-                <a href="#shop" class="mobile-nav-link">Shop</a>
+                <a href="#" class="mobile-nav-link" id="mobile-tokenomics-link">Tokenomics</a>
+                <a href="#" class="mobile-nav-link" id="mobile-shop-link">Shop</a>
                 <a href="#forum" class="mobile-nav-link" id="mobile-forum-link">Forum</a>
                 <a href="#chat" class="mobile-nav-link" id="mobile-chat-link">Chat</a>
                 <div class="mobile-wallet-section">
@@ -93,6 +93,29 @@
             </div>
         </div>
     </nav>
+
+    <!-- Under Development Notice -->
+    <div id="dev-notice" class="dev-notice-overlay">
+        <div class="dev-notice-box">
+            <div class="dev-notice-header">
+                <span class="dev-notice-title">UNDER DEVELOPMENT</span>
+            </div>
+            <div class="dev-notice-content">
+                <p class="dev-notice-text">
+                    The Basement is currently in active development.
+                </p>
+                <p class="dev-notice-text">
+                    Many features and functions are still being built.
+                </p>
+                <p class="dev-notice-text small">
+                    Expect bugs, incomplete features, and frequent updates.
+                </p>
+            </div>
+            <button id="close-dev-notice" class="dev-notice-close">
+                ENTER ANYWAY
+            </button>
+        </div>
+    </div>
 
     <!-- Main Layout -->
     <div class="main-layout">
