Fix mobile UI and enable anonymous chat - Hide 'The Basement' text on mobile, keep only logo - Enable anonymous chat by removing disabled attributes - Improve mobile navbar (smaller logo, no text) - Update chat welcome message to mention anonymous mode - Add migration guide documentation - Forum upvote/downvote already implemented - Forum posts save to database (not mock data)

--- a/public/index.html
+++ b/public/index.html
@@ -147,14 +147,14 @@
                     </div>
                     <div class="system-message">
                         <span class="timestamp">[00:00]</span>
-                        <span class="system-text">*** Connect your wallet to chat</span>
+                        <span class="system-text">*** You can chat anonymously or connect wallet for persistent messages</span>
                     </div>
                 </div>
                 <div class="chat-input">
-                    <input type="text" id="chat-input-field" placeholder="Type message...">
+                    <input type="text" id="chat-input-field" placeholder="Type message... (anonymous mode)">
                     <input type="file" id="file-input" accept="image/*" style="display: none;">
-                    <button type="button" id="file-upload-btn" class="file-upload-btn" disabled>📷</button>
-                    <button id="send-btn" disabled>Send</button>
+                    <button type="button" id="file-upload-btn" class="file-upload-btn">📷</button>
+                    <button id="send-btn">Send</button>
                 </div>
             </div>
         </aside>
