--- a/public/arcade/connect4-game.html
+++ b/public/arcade/connect4-game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect 4 - The Basement Arcade</title>
-    <link rel="stylesheet" href="arcade.css">
-    <link rel="stylesheet" href="mobile-arcade.css">
+    <link rel="stylesheet" href="arcade.css?v=2">
+    <link rel="stylesheet" href="mobile-arcade.css?v=2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
