feat: implement token-gating, mobile fixes, and smart contract integration
- Add comprehensive token-gating for IRC channels, forum posts, and chat messages
- Integrate Base network token (0xcf4a...ca23) with minimum 0.001 token requirement
- Fix arcade mobile UI scaling issues with responsive CSS
- Update tokenomics page with embedded DexScreener and BubbleMaps charts
- Create unified BasementArcade smart contract with token holder benefits
- Add token balance API endpoint for real-time verification
- Implement 50% fee discount for token holders (2.5% vs 5%)
- Add mobile-responsive.css for all arcade games
- Fix Connect4, CoinToss, War, and RPS mobile layouts
- Add deployment scripts and comprehensive documentation
- Fix TypeScript linter errors

Token Features:
- Server-side balance verification on Base network
- Token holder benefits and discounts
- Helpful error messages with purchase links
- Real-time balance checking via viem

Mobile Improvements:
- Responsive scaling (375px-1024px+ breakpoints)
- Touch-friendly buttons (44px minimum)
- Optimized grid layouts for small screens
- Reduced visual effects on mobile for performance
- Safe area support for notched devices

--- a/public/arcade/arcade.html
+++ b/public/arcade/arcade.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>The Basement Arcade</title>
-    <link rel="stylesheet" href="arcade.css?v=2">
-    <link rel="stylesheet" href="mobile-arcade.css?v=2">
+    <link rel="stylesheet" href="arcade.css?v=3">
+    <link rel="stylesheet" href="arcade-games.css?v=3">
+    <link rel="stylesheet" href="crt-boot.css?v=1">
+    <link rel="stylesheet" href="mobile-responsive.css?v=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
