feat: implement 5 token burn mechanism and fix wallet connection
Major Features:
- Implement 5 token burn per channel creation (deflationary mechanism)
- Fix wallet connection with proper Base network switching
- Add real on-chain token data fetching from Base network
- Update tokenomics page with accurate market data from DexScreener
- Create token burn API endpoint (/api/token/burn)
- Create token info API endpoint (/api/token/info)
- Add wallet utilities for token burning

Burn Mechanism:
- 5 BASEMENT tokens burned to 0x...dEaD per channel creation
- Creates scarcity and deflationary pressure
- Transparent and verifiable on BaseScan
- Frontend executes burn tx before channel creation

Tokenomics Improvements:
- Fetch real total supply from on-chain
- Display accurate market cap from DexScreener API
- Show live price, volume, liquidity data
- Highlight Zora Creator Coin platform
- Updated burn mechanics section

Wallet Fixes:
- Add switchToBaseNetwork function
- Properly handle Base network addition
- Support MetaMask, Phantom, Base Wallet
- Auto-switch to Base on connection

Token Config Updates:
- Burn amount: 5 tokens (5e18 wei)
- Extended ERC-20 ABI with transfer functions
- Burn address configured
- Requirements updated

--- a/public/index.html
+++ b/public/index.html
@@ -372,7 +372,9 @@
 
     <!-- Security Module - MUST load first -->
     <script src="security.js"></script>
+    <!-- Wallet Connection Utilities -->
+    <script src="wallet-utils.js?v=1"></script>
     <!-- Base Account SDK -->
-    <script src="script.js?v=3"></script>
+    <script src="script.js?v=4"></script>
 </body>
 </html>
