--- a/public/index.html
+++ b/public/index.html
@@ -370,6 +370,148 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-left">
+                <p class="footer-text">The Basement • Base Network • Zora Creator Coin</p>
+                <p class="footer-subtext">Contract: 0xcf4a...ca23</p>
+            </div>
+            <div class="footer-right">
+                <div class="social-links">
+                    <a href="https://x.com/joseph1133287" target="_blank" rel="noopener noreferrer" class="social-link" title="Follow on X">
+                        <img src="assets/x.svg" alt="X (Twitter)" class="social-icon">
+                    </a>
+                    <a href="https://zora.co/@0xbasement" target="_blank" rel="noopener noreferrer" class="social-link" title="View on Zora">
+                        <img src="assets/zorb.svg" alt="Zora" class="social-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <style>
+        .site-footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.85);
+            backdrop-filter: blur(15px);
+            border-top: 1px solid rgba(0, 82, 255, 0.3);
+            padding: 1rem 2rem;
+            z-index: 100;
+            box-shadow: 0 -4px 20px rgba(0, 82, 255, 0.2);
+        }
+
+        .footer-content {
+            max-width: 1400px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+
+        .footer-left {
+            flex: 1;
+        }
+
+        .footer-text {
+            font-size: 0.7rem;
+            color: #00BFFF;
+            text-shadow: 0 0 5px rgba(0, 191, 255, 0.5);
+            margin-bottom: 0.25rem;
+            font-family: 'Press Start 2P', monospace;
+        }
+
+        .footer-subtext {
+            font-size: 0.5rem;
+            color: rgba(255, 255, 255, 0.6);
+            font-family: 'Courier New', monospace;
+        }
+
+        .footer-right {
+            flex: 0 0 auto;
+        }
+
+        .social-links {
+            display: flex;
+            gap: 1.5rem;
+            align-items: center;
+        }
+
+        .social-link {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            background: rgba(0, 82, 255, 0.1);
+            border: 2px solid #0052ff99;
+            border-radius: 50%;
+            transition: all 0.3s ease;
+            padding: 8px;
+            box-shadow: 0 0 10px rgba(0, 82, 255, 0.3);
+        }
+
+        .social-link:hover {
+            background: rgba(0, 82, 255, 0.3);
+            border-color: #00BFFF;
+            box-shadow: 0 0 20px rgba(0, 191, 255, 0.6);
+            transform: translateY(-3px);
+        }
+
+        .social-icon {
+            width: 24px;
+            height: 24px;
+            filter: invert(1) drop-shadow(0 0 5px rgba(0, 191, 255, 0.6));
+            transition: all 0.3s ease;
+        }
+
+        .social-link:hover .social-icon {
+            filter: invert(1) drop-shadow(0 0 10px rgba(0, 191, 255, 0.9));
+            transform: scale(1.1);
+        }
+
+        /* Mobile adjustments */
+        @media (max-width: 768px) {
+            .site-footer {
+                padding: 0.75rem 1rem;
+            }
+
+            .footer-content {
+                flex-direction: column;
+                text-align: center;
+                gap: 0.75rem;
+            }
+
+            .footer-text {
+                font-size: 0.5rem;
+            }
+
+            .footer-subtext {
+                font-size: 0.4rem;
+            }
+
+            .social-link {
+                width: 36px;
+                height: 36px;
+            }
+
+            .social-icon {
+                width: 20px;
+                height: 20px;
+            }
+        }
+
+        /* Add padding to main content so footer doesn't overlap */
+        body {
+            padding-bottom: 80px;
+        }
+    </style>
+
     <!-- Security Module - MUST load first -->
     <script src="security.js"></script>
     <!-- Wallet Connection Utilities -->
