--- a/public/tokenomics.html
+++ b/public/tokenomics.html
@@ -628,6 +628,26 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-left">
+                <p class="footer-text">The Basement • Base Network • Zora Creator Coin</p>
+                <p class="footer-subtext">Contract: 0xcf4a...ca23</p>
+            </div>
+            <div class="footer-right">
+                <div class="social-links">
+                    <a href="https://x.com/joseph1133287" target="_blank" rel="noopener noreferrer" class="social-link" title="Follow on X">
+                        <img src="assets/x.svg" alt="X (Twitter)" class="social-icon">
+                    </a>
+                    <a href="https://zora.co/@0xbasement" target="_blank" rel="noopener noreferrer" class="social-link" title="View on Zora">
+                        <img src="assets/zorb.svg" alt="Zora" class="social-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="security.js"></script>
     <script src="script.js"></script>
     <script>
