--- a/public/tokenomics.html
+++ b/public/tokenomics.html
@@ -629,19 +629,18 @@
     </div>
 
     <!-- Footer -->
-    <footer class="site-footer">
+    <footer class="site-footer" style="position: relative; margin-top: 4rem; padding: 2rem; background: rgba(0, 0, 0, 0.95); border-top: 1px solid rgba(0, 82, 255, 0.3);">
         <div class="footer-content">
             <div class="footer-left">
                 <p class="footer-text">The Basement • Base Network • Zora Creator Coin</p>
-                <p class="footer-subtext">Contract: 0xcf4a...ca23</p>
             </div>
             <div class="footer-right">
                 <div class="social-links">
-                    <a href="https://x.com/joseph1133287" target="_blank" rel="noopener noreferrer" class="social-link" title="Follow on X">
-                        <img src="assets/x.svg" alt="X (Twitter)" class="social-icon">
+                    <a href="https://x.com/joseph1133287" target="_blank" rel="noopener noreferrer" class="social-link" title="Follow on X" style="display: inline-flex; opacity: 0.8; transition: all 0.3s;">
+                        <img src="assets/x.svg" alt="X (Twitter)" style="width: 32px; height: 32px; filter: invert(1) drop-shadow(0 0 5px rgba(0, 191, 255, 0.6));">
                     </a>
-                    <a href="https://zora.co/@0xbasement" target="_blank" rel="noopener noreferrer" class="social-link" title="View on Zora">
-                        <img src="assets/zorb.svg" alt="Zora" class="social-icon">
+                    <a href="https://zora.co/@0xbasement" target="_blank" rel="noopener noreferrer" class="social-link" title="View on Zora" style="display: inline-flex; opacity: 0.8; transition: all 0.3s;">
+                        <img src="assets/zorb.svg" alt="Zora" style="width: 32px; height: 32px; filter: invert(1) drop-shadow(0 0 5px rgba(0, 191, 255, 0.6));">
                     </a>
                 </div>
             </div>
