fix: navbar disable shop/forum, chat channel separation
- Properly disable Shop and Forum in navbar (span instead of link)
- Add user-select: none to disabled nav items
- Fix loadChannelMessages to properly clear chat per channel
- Show channel-specific message count when switching
- Add empty channel message when no messages exist
- Each channel now shows ONLY its own chat history
- Chat properly separated: #basement, #chs, #zora
- All fixes committed and ready to deploy

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
             <!-- Center Navigation -->
             <div class="nav-links">
                 <a href="arcade/arcade.html" class="nav-link">Arcade</a>
-                <a href="#" class="nav-link" id="tokenomics-link">Tokenomics</a>
-                <a href="#" class="nav-link" id="shop-link">Shop</a>
-                <a href="/forum" class="nav-link" id="forum-link">Forum</a>
+                <a href="tokenomics.html" class="nav-link">Tokenomics</a>
+                <span class="nav-link" style="opacity: 0.4; cursor: not-allowed; pointer-events: none; user-select: none;">Shop (Soon)</span>
+                <span class="nav-link" style="opacity: 0.4; cursor: not-allowed; pointer-events: none; user-select: none;">Forum (Soon)</span>
             </div>
             
             <!-- Right Wallet Connect -->
