fix: add chat responsive fixes CSS to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icon.ico">
     <link rel="manifest" href="data:application/json,{&quot;icons&quot;:[{&quot;src&quot;:&quot;assets/icon.ico&quot;,&quot;sizes&quot;:&quot;192x192&quot;,&quot;type&quot;:&quot;image/x-icon&quot;}]}">
-    <link rel="stylesheet" href="style.css?v=3">
-    <link rel="stylesheet" href="mobile-fixes.css?v=3">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="professional-styles.css?v=3">
+    <link rel="stylesheet" href="style.css?v=4">
+    <link rel="stylesheet" href="chat-responsive-fixes.css?v=1">
+    <link rel="stylesheet" href="mobile-fixes.css?v=3">
 </head>
 <body>
     <!-- Top Navigation Bar -->
