--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="professional-styles.css?v=3">
     <link rel="stylesheet" href="style.css?v=4">
-    <link rel="stylesheet" href="chat-responsive-fixes.css?v=1">
+    <link rel="stylesheet" href="chat-fluid-responsive.css?v=1">
     <link rel="stylesheet" href="mobile-fixes.css?v=3">
 </head>
 <body>
