--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="professional-styles.css?v=3">
-    <link rel="stylesheet" href="style.css?v=4">
-    <link rel="stylesheet" href="chat-fluid-responsive.css?v=1">
-    <link rel="stylesheet" href="mobile-fixes.css?v=3">
+    <link rel="stylesheet" href="style.css?v=5">
+    <link rel="stylesheet" href="chat-fluid-responsive.css?v=2">
+    <link rel="stylesheet" href="clean-consolidated.css?v=1">
 </head>
 <body>
     <!-- Top Navigation Bar -->
