feat: Add Lucky Block jackpot game with full production enhancements
- Add new Lucky Block jackpot game with circular wheel visualization
- Implement weighted probability betting system (any ETH amount)
- Add spinning wheel animation with sound effects
- Integrate Supabase chat with real-time polling
- Fix wallet connections: Add Phantom support for Base network
- Unify styling across entire site (retro cyberpunk theme)
- Add beta warnings to all arcade games
- Set game timers to 60 seconds (from 120s)
- Remove all mock data, use real ETH price APIs (CoinGecko + Binance fallback)
- Fix TypeScript errors in chat API routes
- Reduce element sizes for professional appearance
- Add responsive design for all screen sizes
- Deploy production-ready smart contracts
- Update deployment scripts to include LuckyBlock
- Add comprehensive documentation and quick start guides

--- a/public/arcade/arcade.html
+++ b/public/arcade/arcade.html
@@ -79,6 +79,12 @@
     <main class="arcade-container">
         <h1 class="neon arcade-title">🎮 ARCADE 🎮</h1>
         
+        <!-- Development Warning -->
+        <div style="background: linear-gradient(135deg, rgba(255, 0, 82, 0.2), rgba(255, 82, 0, 0.2)); border: 2px solid #ff0052; border-radius: 15px; padding: 20px; margin-bottom: 30px; text-align: center;">
+            <h3 style="color: #ff0052; margin-bottom: 10px; font-size: 0.9rem;">⚠️ BETA TESTING ⚠️</h3>
+            <p style="font-size: 0.7rem; line-height: 1.6;">Games are currently in development. <strong>DO NOT WAGER REAL ETH YET!</strong> Wagering functionality and smart contracts are not fully deployed. Play in demo mode only until official launch announcement.</p>
+        </div>
+        
         <!-- Game Grid -->
         <div class="game-grid">
             <!-- Coin Toss Game -->
@@ -123,6 +129,15 @@
                 <p class="game-description">Best of 3 battles</p>
                 <p class="game-description">Winner takes all</p>
                 <a href="rps-game.html" class="btn-play" style="text-decoration: none; display: inline-block; text-align: center; line-height: 1.5;">Play Now</a>
+            </div>
+
+            <!-- Lucky Block Game -->
+            <div class="game-tile" id="luckyblock-tile">
+                <div class="game-icon">💎</div>
+                <h3 class="game-title">Lucky Block</h3>
+                <p class="game-description">Jackpot Mayhem</p>
+                <p class="game-description">Winner takes all</p>
+                <a href="luckyblock.html" class="btn-play" style="text-decoration: none; display: inline-block; text-align: center; line-height: 1.5;">Play Now</a>
             </div>
 
             <div class="game-tile placeholder">
