--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,10 @@
                         <span class="dropdown-arrow">▼</span>
                     </button>
                     <div id="wallet-options" class="wallet-options">
-                        <button class="wallet-option" data-wallet="base">Base Wallet</button>
-                        <button class="wallet-option" data-wallet="phantom">Phantom</button>
                         <button class="wallet-option" data-wallet="metamask">MetaMask</button>
+                        <button class="wallet-option" data-wallet="coinbase">Coinbase Wallet</button>
+                        <button class="wallet-option" data-wallet="phantom">Phantom</button>
+                        <button class="wallet-option" data-wallet="base">Base Wallet</button>
                     </div>
                 </div>
                 <div id="wallet-info" class="wallet-info">
@@ -81,9 +82,10 @@
                 <a href="#chat" class="mobile-nav-link" id="mobile-chat-link">Chat</a>
                 <div class="mobile-wallet-section">
                     <div id="mobile-wallet-options" class="mobile-wallet-options">
-                        <button class="mobile-wallet-btn" data-wallet="base">Connect Base Wallet</button>
-                        <button class="mobile-wallet-btn" data-wallet="phantom">Connect Phantom</button>
                         <button class="mobile-wallet-btn" data-wallet="metamask">Connect MetaMask</button>
+                        <button class="mobile-wallet-btn" data-wallet="coinbase">Connect Coinbase Wallet</button>
+                        <button class="mobile-wallet-btn" data-wallet="phantom">Connect Phantom</button>
+                        <button class="mobile-wallet-btn" data-wallet="base">Connect Base Wallet</button>
                     </div>
                     <div id="mobile-wallet-info" class="mobile-wallet-info" style="display: none;">
                         <span id="mobile-wallet-address" class="mobile-wallet-address"></span>
