feat: Deploy all game contracts to Base mainnet and integrate live stats
âœ… ALL CONTRACTS DEPLOYED TO BASE MAINNET:
- LuckyBlock: 0xBD39484E23b7f4c838A6eF1E2e140E01646991F3
- CoinToss: 0xE5Bb0d6cD62BaE2EE4ece101D46B64C737385BE2
- Connect4: 0x959812ed75211C6e9e2376bc61a6d2B832954B2e
- War: 0x267540F44ceAAB3e854e8e6944B1d68Ff5c9BD60

Frontend Updates:
- Updated LuckyBlock frontend with live contract address
- Changed beta warnings to LIVE status banners
- Added live stats dashboard to homepage
- Integrated real-time contract data fetching
- Added animated stat counters
- Stats auto-refresh every 15 seconds

Contract Fixes:
- Fixed OpenZeppelin v5 import paths (security -> utils)
- Fixed Connect4 for loop syntax for Solidity 0.8.24
- Fixed LuckyBlock entryFee struct issue
- All contracts compiled and deployed successfully

--- a/public/arcade/arcade.html
+++ b/public/arcade/arcade.html
@@ -79,10 +79,10 @@
     <main class="arcade-container">
         <h1 class="neon arcade-title">🎮 ARCADE 🎮</h1>
         
-        <!-- Development Warning -->
-        <div style="background: linear-gradient(135deg, rgba(255, 0, 82, 0.2), rgba(255, 82, 0, 0.2)); border: 2px solid #ff0052; border-radius: 15px; padding: 20px; margin-bottom: 30px; text-align: center;">
-            <h3 style="color: #ff0052; margin-bottom: 10px; font-size: 0.9rem;">⚠️ BETA TESTING ⚠️</h3>
-            <p style="font-size: 0.7rem; line-height: 1.6;">Games are currently in development. <strong>DO NOT WAGER REAL ETH YET!</strong> Wagering functionality and smart contracts are not fully deployed. Play in demo mode only until official launch announcement.</p>
+        <!-- Live Status -->
+        <div style="background: linear-gradient(135deg, rgba(0, 255, 136, 0.2), rgba(0, 191, 255, 0.2)); border: 2px solid #00FF88; border-radius: 15px; padding: 20px; margin-bottom: 30px; text-align: center;">
+            <h3 style="color: #00FF88; margin-bottom: 10px; font-size: 0.9rem;">✅ LIVE ON BASE MAINNET ✅</h3>
+            <p style="font-size: 0.7rem; line-height: 1.6;">All games deployed and functional! <strong>Lucky Block is LIVE</strong> - play with real ETH. PvP games (Coin Toss, Connect4, War) ready for integration.</p>
         </div>
         
         <!-- Game Grid -->
