--- a/public/index.html
+++ b/public/index.html
@@ -168,6 +168,29 @@
                 <div class="welcome-section" id="welcome-section">
                     <h1 class="main-title">Welcome to The Basement</h1>
                     <p class="main-subtitle">Retro Web3 Arcade, IRC, and Forum on Basechain!</p>
+                    
+                    <!-- Live Stats Dashboard -->
+                    <div class="stats-dashboard" style="margin-top: 40px; background: rgba(0, 0, 0, 0.7); border: 2px solid #0052ff99; border-radius: 12px; padding: 30px;">
+                        <h2 style="font-family: 'Press Start 2P', monospace; font-size: 1rem; color: #00BFFF; text-align: center; margin-bottom: 25px;">🔥 LIVE STATS 🔥</h2>
+                        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 20px;">
+                            <div style="text-align: center; padding: 15px;">
+                                <div style="font-family: 'Press Start 2P', monospace; font-size: 1.5rem; color: #ffd700; text-shadow: 0 0 10px #ffd700;" id="total-wagered-stat">0</div>
+                                <div style="font-family: 'Courier Prime', monospace; font-size: 0.75rem; color: #888; margin-top: 10px; text-transform: uppercase;">ETH Wagered</div>
+                            </div>
+                            <div style="text-align: center; padding: 15px;">
+                                <div style="font-family: 'Press Start 2P', monospace; font-size: 1.5rem; color: #00BFFF; text-shadow: 0 0 10px #00BFFF;" id="total-players-stat">0</div>
+                                <div style="font-family: 'Courier Prime', monospace; font-size: 0.75rem; color: #888; margin-top: 10px; text-transform: uppercase;">Total Players</div>
+                            </div>
+                            <div style="text-align: center; padding: 15px;">
+                                <div style="font-family: 'Press Start 2P', monospace; font-size: 1.5rem; color: #00FF88; text-shadow: 0 0 10px #00FF88;" id="total-rounds-stat">0</div>
+                                <div style="font-family: 'Courier Prime', monospace; font-size: 0.75rem; color: #888; margin-top: 10px; text-transform: uppercase;">Rounds Played</div>
+                            </div>
+                            <div style="text-align: center; padding: 15px;">
+                                <div style="font-family: 'Press Start 2P', monospace; font-size: 1.5rem; color: #ff00ff; text-shadow: 0 0 10px #ff00ff;" id="active-now-stat">0</div>
+                                <div style="font-family: 'Courier Prime', monospace; font-size: 0.75rem; color: #888; margin-top: 10px; text-transform: uppercase;">Playing Now</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 
                 <!-- Forum Section -->
