fix: Phantom wallet connection and unify wallet handling site-wide
Wallet Connection Fixes:
- Fixed Phantom wallet 'switch to Base network' error
- Made network switching non-blocking (graceful failure)
- Now attempts to switch/add Base network but continues if user rejects
- Consistent wallet handling across main site and arcade

Changes:
- Updated script.js connectWallet for Phantom and Coinbase
- Updated luckyblock.html connectPhantom function
- Network switch failures no longer block connection
- User can manually switch network if auto-switch fails

Wallet Documentation:
- Created WALLET_ADDRESSES.md with all official addresses
- House Wallet: 0x5Da407f983e0f11B3f7F67Acd64877b42B22068D (hardcoded in contracts)
- Deployment Wallet: 0x22B33DbF8c4a07d37E86A8Bcc7dC156D6ecBe220 (deployed all contracts)
- All 4 game contracts listed with Basescan links
- Revenue tracking and security notes included

Ready for first live bets! Phantom users can now connect smoothly.

--- a/public/arcade/luckyblock.html
+++ b/public/arcade/luckyblock.html
@@ -1757,6 +1757,35 @@
         async function connectPhantom() {
             try {
                 if (typeof window.phantom !== 'undefined' && window.phantom.ethereum) {
+                    // Try to switch to Base network (non-blocking)
+                    try {
+                        await window.phantom.ethereum.request({
+                            method: 'wallet_switchEthereumChain',
+                            params: [{ chainId: BASE_CHAIN_ID }],
+                        });
+                        console.log('✅ Phantom switched to Base network');
+                    } catch (switchError) {
+                        // If network doesn't exist, try to add it
+                        if (switchError.code === 4902) {
+                            try {
+                                await window.phantom.ethereum.request({
+                                    method: 'wallet_addEthereumChain',
+                                    params: [{
+                                        chainId: BASE_CHAIN_ID,
+                                        chainName: 'Base Mainnet',
+                                        nativeCurrency: { name: 'ETH', symbol: 'ETH', decimals: 18 },
+                                        rpcUrls: ['https://mainnet.base.org'],
+                                        blockExplorerUrls: ['https://basescan.org']
+                                    }],
+                                });
+                            } catch (addError) {
+                                console.warn('⚠️ Failed to add Base network, continuing anyway');
+                            }
+                        } else {
+                            console.warn('⚠️ Network switch failed or rejected, continuing with current network');
+                        }
+                    }
+                    
                     const accounts = await window.phantom.ethereum.request({ method: 'eth_requestAccounts' });
                     userAddress = accounts[0];
                     
