--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,8 @@
                     </button>
                     <div id="wallet-options" class="wallet-options">
                         <button class="wallet-option" data-wallet="metamask">MetaMask</button>
-                        <button class="wallet-option" data-wallet="coinbase">Coinbase Wallet</button>
-                        <button class="wallet-option" data-wallet="phantom">Phantom</button>
                         <button class="wallet-option" data-wallet="base">Base Wallet</button>
+                        <button class="wallet-option" data-wallet="phantom">Phantom</button>
                     </div>
                 </div>
                 <div id="wallet-info" class="wallet-info">
@@ -83,7 +82,7 @@
                 <div class="mobile-wallet-section">
                     <div id="mobile-wallet-options" class="mobile-wallet-options">
                         <button class="mobile-wallet-btn" data-wallet="metamask">Connect MetaMask</button>
-                        <button class="mobile-wallet-btn" data-wallet="coinbase">Connect Coinbase Wallet</button>
+                        <button class="mobile-wallet-btn" data-wallet="base">Connect Base Wallet</button>
                         <button class="mobile-wallet-btn" data-wallet="phantom">Connect Phantom</button>
                         <button class="mobile-wallet-btn" data-wallet="base">Connect Base Wallet</button>
                     </div>
