--- a/public/arcade/luckyblock.html
+++ b/public/arcade/luckyblock.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://*.base.org https://mainnet.base.org https://api.coingecko.com wss://*; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://unpkg.com https://cdnjs.cloudflare.com; connect-src 'self' https://*.base.org https://mainnet.base.org https://api.coingecko.com wss://*; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;">
     <title>Lucky Block Jackpot - The Basement Arcade</title>
     <link rel="icon" href="../assets/icon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1339,10 +1339,8 @@
     
     <!-- Scripts -->
     <script src="../security.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@latest/lib/index.iife.min.js" crossorigin="anonymous" onerror="console.error('Failed to load Solana web3.js')"></script>
-    <script src="https://unpkg.com/ethers@6.10.0/dist/ethers.umd.min.js" integrity="sha384-" crossorigin="anonymous" onerror="handleEthersLoadError()"></script>
     <script>
-        // Fallback handler if ethers.js fails to load from primary CDN
+        // Fallback handler - MUST be defined before script tags that use it
         function handleEthersLoadError() {
             console.error('❌ Primary ethers CDN failed, trying fallback...');
             const fallbackScript = document.createElement('script');
@@ -1355,6 +1353,8 @@
             document.head.appendChild(fallbackScript);
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@latest/lib/index.iife.min.js" crossorigin="anonymous" onerror="console.error('Failed to load Solana web3.js')"></script>
+    <script src="https://unpkg.com/ethers@6.10.0/dist/ethers.umd.min.js" crossorigin="anonymous" onerror="handleEthersLoadError()"></script>
     <script>
         // Multi-Chain Config
         const SUPPORTED_CHAINS = {
