feat: add crypto payments shop with Coinbase Commerce integration
Add complete shop implementation following Base documentation:

🛍️ Shop Features:
- Product grid with 6 mock products (passes, memberships, credits, NFTs, bundles)
- Category filtering system (All, Passes, VIP, Credits, NFTs, Bundles)
- Responsive design matching The Basement aesthetic
- Real-time USD price estimates
- Feature lists for each product

💳 Coinbase Commerce Integration:
- OnchainKit Checkout components for crypto payments
- Smart wallet support (coinbaseWallet with smartWalletOnly preference)
- Real-time checkout status tracking
- Base network optimization for low gas fees
- Secure wallet connection with Wagmi

🎨 Components:
- app/shop/page.tsx - Main shop page with product grid
- components/shop/ProductCard.tsx - Individual product cards with checkout
- Product cards show features, pricing, and handle wallet connection
- Demo mode for unconfigured products with helpful setup messages

📚 Documentation:
- SHOP_SETUP_GUIDE.md - Complete setup instructions for Coinbase Commerce
- Step-by-step guide for creating products
- Environment variable configuration
- Webhook setup instructions
- Production deployment guide
- Troubleshooting section

🔧 Configuration:
- Updated navigation links in public/index.html to point to /shop
- Mobile navigation updated
- Providers already configured with OnchainKit and Base network
- Smart wallet preference set for better UX

📝 Setup Requirements:
- NEXT_PUBLIC_PRODUCT_* - Coinbase Commerce product UUIDs
- NEXT_PUBLIC_ONCHAINKIT_API_KEY - CDP API key
- NEXT_PUBLIC_WC_PROJECT_ID - WalletConnect project ID

Reference: https://docs.base.org/cookbook/accept-crypto-payments

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <div class="nav-links">
                 <a href="arcade/arcade.html" class="nav-link">Arcade</a>
                 <a href="#" class="nav-link" id="tokenomics-link">Tokenomics</a>
-                <a href="#" class="nav-link" id="shop-link">Shop</a>
+                <a href="/shop" class="nav-link" id="shop-link">Shop</a>
                 <a href="/forum" class="nav-link" id="forum-link">Forum</a>
             </div>
             
@@ -76,7 +76,7 @@
             <div id="mobile-menu" class="mobile-menu hidden">
                 <a href="arcade/arcade.html" class="mobile-nav-link">Arcade</a>
                 <a href="#" class="mobile-nav-link" id="mobile-tokenomics-link">Tokenomics</a>
-                <a href="#" class="mobile-nav-link" id="mobile-shop-link">Shop</a>
+                <a href="/shop" class="mobile-nav-link" id="mobile-shop-link">Shop</a>
                 <a href="#forum" class="mobile-nav-link" id="mobile-forum-link">Forum</a>
                 <a href="#chat" class="mobile-nav-link" id="mobile-chat-link">Chat</a>
                 <div class="mobile-wallet-section">
