--- a/public/arcade/arcade.html
+++ b/public/arcade/arcade.html
@@ -140,6 +140,15 @@
                 <a href="luckyblock.html" class="btn-play" style="text-decoration: none; display: inline-block; text-align: center; line-height: 1.5;">Play Now</a>
             </div>
 
+            <!-- Chess Game -->
+            <div class="game-tile" id="chess-tile">
+                <div class="game-icon">♟️</div>
+                <h3 class="game-title">Chess Wager</h3>
+                <p class="game-description">Strategic Battle</p>
+                <p class="game-description">Winner takes all</p>
+                <a href="chess.html" class="btn-play" style="text-decoration: none; display: inline-block; text-align: center; line-height: 1.5;">Play Now</a>
+            </div>
+
             <div class="game-tile placeholder">
                 <div class="game-icon">🎯</div>
                 <h3 class="game-title">Target Master</h3>
