Add Pump.fun (0BT token) link to footers across all pages

--- a/public/arcade/luckyblock.html
+++ b/public/arcade/luckyblock.html
@@ -1323,6 +1323,14 @@
                     </svg>
                     <span>Zora</span>
                 </a>
+                <a href="https://pump.fun/coin/D4MXRKhzSMapDZ5bLEA1bmjrUPLZhHZRhSkS6wrBpump" target="_blank" rel="noopener noreferrer" class="social-link" title="0xbasement Token (0BT) on Pump.fun">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="2"/>
+                        <path d="M8 12h8M12 8v8" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/>
+                        <circle cx="12" cy="12" r="3" fill="currentColor"/>
+                    </svg>
+                    <span>🚀 Pump.fun</span>
+                </a>
                 <a href="https://x.com/TheBasementWTF" target="_blank" rel="noopener noreferrer" class="social-link" title="Follow on X">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
