--- a/public/arcade/chess.html
+++ b/public/arcade/chess.html
@@ -432,6 +432,42 @@
             background: #0041cc;
         }
 
+        /* Footer */
+        .site-footer {
+            background: rgba(0, 0, 0, 0.9);
+            border-top: 2px solid #0052ff;
+            padding: 20px;
+            margin-top: 40px;
+            text-align: center;
+        }
+
+        .footer-social {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 15px;
+        }
+
+        .social-link {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            color: #0052ff;
+            text-decoration: none;
+            font-size: 0.6rem;
+            transition: all 0.3s;
+        }
+
+        .social-link:hover {
+            color: #0080ff;
+            transform: translateY(-2px);
+        }
+
+        .social-link svg {
+            width: 20px;
+            height: 20px;
+        }
+
         /* Responsive */
         @media (max-width: 1200px) {
             .container {
@@ -771,6 +807,35 @@
 
         console.log('♟️ Chess Wager initialized!');
     </script>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-social">
+            <a href="https://zora.co/@thebasement" target="_blank" rel="noopener noreferrer" class="social-link" title="Zora">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <circle cx="12" cy="12" r="10"/>
+                </svg>
+                <span>Zora</span>
+            </a>
+            <a href="https://pump.fun/coin/D4MXRKhzSMapDZ5bLEA1bmjrUPLZhHZRhSkS6wrBpump" target="_blank" rel="noopener noreferrer" class="social-link" title="0xbasement Token (0BT)">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="2"/>
+                    <path d="M8 12h8M12 8v8" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/>
+                    <circle cx="12" cy="12" r="3" fill="currentColor"/>
+                </svg>
+                <span>🚀 0BT Token</span>
+            </a>
+            <a href="https://x.com/thebasementarc" target="_blank" rel="noopener noreferrer" class="social-link" title="X (Twitter)">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                </svg>
+                <span>X (Twitter)</span>
+            </a>
+        </div>
+        <p style="margin-top: 15px; font-size: 0.6rem; color: #666;">
+            The Basement © 2025 | Built on Base & Solana
+        </p>
+    </footer>
 </body>
 </html>
 
