--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icon.ico">
     <link rel="manifest" href="data:application/json,{&quot;icons&quot;:[{&quot;src&quot;:&quot;assets/icon.ico&quot;,&quot;sizes&quot;:&quot;192x192&quot;,&quot;type&quot;:&quot;image/x-icon&quot;}]}">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive-chat.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -432,6 +433,8 @@
 
     <!-- Security Module - MUST load first -->
     <script src="security.js"></script>
+    <!-- Responsive Layout System -->
+    <script src="responsive-layout.js"></script>
     <!-- Base Account SDK -->
     <script src="script.js"></script>
 </body>
