Complete tokenomics update: Zora platform integration with Solscan tracking

--- a/public/tokenomics.html
+++ b/public/tokenomics.html
@@ -388,14 +388,14 @@
                 </div>
             </div>
 
-            <!-- Base Token (Coming Soon) -->
+            <!-- Base Token (Coming Soon on Zora) -->
             <div class="token-card" style="opacity: 0.7;">
                 <div class="token-header">
-                    <div class="token-icon" style="background: linear-gradient(135deg, #0052ff, #0080ff);">🔵</div>
+                    <div class="token-icon" style="background: linear-gradient(135deg, #0052ff, #0080ff);">⚡</div>
                     <div class="token-info">
                         <h2 class="token-name">The Basement</h2>
                         <div class="token-symbol">BASEMENT</div>
-                        <div class="token-network">Base Network • ERC-20</div>
+                        <div class="token-network">Zora on Base • ERC-20</div>
                     </div>
                 </div>
 
@@ -406,7 +406,7 @@
                     </div>
                     <div class="stat-item">
                         <div class="stat-label">Platform</div>
-                        <div class="stat-value">Base DEX</div>
+                        <div class="stat-value">Zora</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-label">Network</div>
@@ -420,12 +420,15 @@
 
                 <div class="token-contract">
                     <div class="contract-label">Contract Address:</div>
-                    <div class="contract-address">TBA - Launching Soon</div>
+                    <div class="contract-address">TBA - Launching Soon on Zora</div>
                 </div>
 
                 <div class="token-links">
-                    <a href="#" class="token-link" style="opacity: 0.5; cursor: not-allowed;">
-                        🔜 Coming Soon
+                    <a href="https://zora.co/" target="_blank" class="token-link">
+                        ⚡ Learn About Zora
+                    </a>
+                    <a href="https://docs.base.org/get-started/launch-token" target="_blank" class="token-link">
+                        📖 Launch Guide
                     </a>
                 </div>
             </div>
